operator/pkg/gateway-api/testdata/gateway/listenerset-route-policy-independence/output/route-policy-independence.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: route-policy-independence
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  allowedListeners:
    namespaces:
      from: All
  listeners:
  - name: gateway-http
    port: 8080
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
status:
  attachedListenerSets: 1
  conditions:
  - type: Accepted
    status: "True"
    reason: Accepted
    message: Gateway successfully scheduled
  - type: Programmed
    status: "False"
    reason: AddressNotAssigned
    message: Gateway waiting for address
  listeners:
  - name: gateway-http
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
    attachedRoutes: 0
    conditions:
    - type: ResolvedRefs
      status: "True"
      reason: ResolvedRefs
      message: Resolved Refs
    - type: Accepted
      status: "True"
      reason: Accepted
      message: Listener Accepted
    - type: Programmed
      status: "False"
      reason: Pending
      message: Address not ready yet
